tests/baselines/reference/objectTypeWithNumericProperty.errors.txt
objectTypeWithNumericProperty.ts(9,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithNumericProperty.ts(10,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithNumericProperty.ts(11,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithNumericProperty.ts(12,10): error TS2454: Variable 'c' is used before being assigned.
objectTypeWithNumericProperty.ts(20,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithNumericProperty.ts(21,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithNumericProperty.ts(22,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithNumericProperty.ts(23,10): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithNumericProperty.ts(30,10): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithNumericProperty.ts(31,10): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithNumericProperty.ts(32,10): error TS2454: Variable 'a' is used before being assigned.
objectTypeWithNumericProperty.ts(33,10): error TS2454: Variable 'a' is used before being assigned.


==== objectTypeWithNumericProperty.ts (12 errors) ====
    // no errors here
    
    class C {
        1: number;
        1.1: string;
    }
    
    var c: C;
    var r1 = c[1];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r2 = c[1.1];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r3 = c['1'];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r4 = c['1.1'];
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        1: number;
        1.1: string;
    }
    
    var i: I;
    var r1 = i[1];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2 = i[1.1];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r3 = i['1'];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r4 = i['1.1'];
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        1: number;
        1.1: string;
    }
    
    var r1 = a[1];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r2 = a[1.1];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r3 = a['1'];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r4 = a['1.1'];
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    var b = {
        1: 1,
        1.1: ""
    }
    
    var r1 = b[1];
    var r2 = b[1.1];
    var r3 = b['1'];
    var r4 = b['1.1'];